fix spacing issue

--- a/artsy/prototypes/auction-operator/v12/assets/css/alerts.css
+++ b/artsy/prototypes/auction-operator/v12/assets/css/alerts.css
@@ -39,6 +39,7 @@
 .alert-window .message {
   position: absolute;
   top: 50%;
+  left: 0;
   width: 100%;
   text-align: center;
   transform: translateY(-50%);
